skeleton loading and overflow issue

--- a/web-client-next/src/components/singleCollection/collectionDetails.module.scss
+++ b/web-client-next/src/components/singleCollection/collectionDetails.module.scss
@@ -528,6 +528,7 @@ svg{
 
 .buttonsRow {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   gap: 0.5rem; /* gap-2 */
   margin-left: auto;
